fix sidebar alignment

--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -152,21 +152,21 @@ a:focus{outline: 0}
 
 .btn:hover{color: #858796; text-decoration: none}
 .btn.focus,.btn:focus{outline: 0; 
--webkit-box-shadow: 0 0 0 .2rem rgba(78,115,223,.25); box-shadow: 0 0 0 .2rem rgba(78,115,223,.25)}
+-webkit-box-shadow: 0 0 0 .2rem #eef1f6; box-shadow: 0 0 0 .2rem #eef1f6}
 .btn.disabled,.btn:disabled{opacity: .65}
 a.btn.disabled,fieldset:disabled a.btn{pointer-events: none}
-.btn-primary{color: #fff; background-color: #5596e6; border-color: #815da7}
+.btn-primary{color: #fff; background-color: #a997bf; border-color: #815da7}
 .btn-primary:hover{color: #fff; background-color: #815da7; border-color: #815da7}
-.btn-primary.focus,.btn-primary:focus{-webkit-box-shadow: 0 0 0 .2rem rgba(105,136,228,.5); box-shadow: 0 0 0 .2rem rgba(105,136,228,.5)}
+.btn-primary.focus,.btn-primary:focus{-webkit-box-shadow: 0 0 0 .2rem #eef1f6; box-shadow: 0 0 0 .2rem #eef1f6}
 .btn-primary.disabled,.btn-primary:disabled{color: #fff; background-color: #815da7; border-color: #815da7}
 .btn-primary:not(:disabled):not(.disabled).active,.btn-primary:not(:disabled):not(.disabled):active,.show>.btn-primary.dropdown-toggle{color: #fff; background-color: #2653d4; border-color: #244ec9}
-.btn-primary:not(:disabled):not(.disabled).active:focus,.btn-primary:not(:disabled):not(.disabled):active:focus,.show>.btn-primary.dropdown-toggle:focus{-webkit-box-shadow: 0 0 0 .2rem rgba(105,136,228,.5); box-shadow: 0 0 0 .2rem rgba(105,136,228,.5)}
+.btn-primary:not(:disabled):not(.disabled).active:focus,.btn-primary:not(:disabled):not(.disabled):active:focus,.show>.btn-primary.dropdown-toggle:focus{-webkit-box-shadow: 0 0 0 .2rem rgba(105,136,228,.5); box-shadow: 0 0 0 .2rem #eef1f6}
 .btn-secondary{color: #fff; background-color: #858796; border-color: #858796}
 .btn-secondary:hover{color: #fff; background-color: #717384; border-color: #6b6d7d}
-.btn-secondary.focus,.btn-secondary:focus{-webkit-box-shadow: 0 0 0 .2rem rgba(151,153,166,.5); box-shadow: 0 0 0 .2rem rgba(151,153,166,.5)}
+.btn-secondary.focus,.btn-secondary:focus{-webkit-box-shadow: 0 0 0 .2rem #eef1f6; box-shadow: 0 0 0 .2rem #eef1f6}
 .btn-secondary.disabled,.btn-secondary:disabled{color: #fff; background-color: #858796; border-color: #858796}
 .btn-secondary:not(:disabled):not(.disabled).active,.btn-secondary:not(:disabled):not(.disabled):active,.show>.btn-secondary.dropdown-toggle{color: #fff; background-color: #6b6d7d; border-color: #656776}
-.btn-secondary:not(:disabled):not(.disabled).active:focus,.btn-secondary:not(:disabled):not(.disabled):active:focus,.show>.btn-secondary.dropdown-toggle:focus{-webkit-box-shadow: 0 0 0 .2rem rgba(151,153,166,.5); box-shadow: 0 0 0 .2rem rgba(151,153,166,.5)}
+.btn-secondary:not(:disabled):not(.disabled).active:focus,.btn-secondary:not(:disabled):not(.disabled):active:focus,.show>.btn-secondary.dropdown-toggle:focus{-webkit-box-shadow: 0 0 0 .2rem #eef1f6; box-shadow: 0 0 0 .2rem #eef1f6}
 
 .accordion>.card{overflow: hidden}
 .accordion>.card:not(:first-of-type) .card-header:first-child{border-radius: 0}
@@ -179,7 +179,7 @@ a.btn.disabled,fieldset:disabled a.btn{pointer-events: none}
 
 
 .form-control::-ms-expand{background-color: transparent; border: 0}
-.form-control:focus{color: #152935; background-color: #fff; border-color: #e7ebf3; outline: 0; -webkit-box-shadow: 0 0 0 .2rem rgba(78,115,223,.25); box-shadow: 0 0 0 .2rem rgba(78,115,223,.25)}
+.form-control:focus{color: #152935; background-color: #fff; border-color: #e7ebf3; outline: 0; -webkit-box-shadow: 0 0 0 .2rem #eef1f6; box-shadow: inset 0 0 0 .2rem #eef1f6}
 .form-control::-webkit-input-placeholder{color: #858796; opacity: 1}
 .form-control:-ms-input-placeholder{color: #858796; opacity: 1}
 .form-control::-ms-input-placeholder{color: #858796; opacity: 1}
